# projects

./: README.md
cpp_core/: CMakeLists.txt
cpp_core/include/: lob.hpp  risk.hpp  tbt_mock.hpp  types.hpp  vwap_simd.hpp
cpp_core/src/: main.cpp  shm_bridge.cpp
docs/: architecture.md  roadmap.md  tick_to_trade_flow.md
python_ai/: alpha_model.py  backtest_driver.py  feature_store.py  requirements.txt  shm_client.py
python_ai/feature_store/: features_2026-04-10.parquet
